@@ -5,6 +5,7 @@ next:
          - check_pagefile: fix crash if there is no pagefile
          - update windows exporter to 0.30.5
          - update node exporter to 1.9.0
+         - check_dns: fix crash without any nameserver
 
 0.32     Thu Mar 13 12:55:24 CET 2025
          - add alpine support
